--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             <button type="submit">Send</button>
         </form>
     </div>
-    <footer id="dynamicFooter"></footer>
-    <script src="https://raw.githubusercontent.com/CursedPrograms/cursedentertainment/4499e7c8831917bfbb01fe5e99e1289602ef9b34/scripts/footer.js"></script>
+    <footer id="dynamicFooter">Footer</footer>
+    <script src="https://cursedprograms.github.io/cursedentertainment/scripts/footer.js"></script>
 </body>
 </html>
