--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <input type="text" id="prompt" name="prompt" required>
             <button type="submit">Send</button>
         </form>
-        <footer id="dynamicFooter">Footer</footer>
+        <footer id="dynamicFooter"></footer>
         <script src="https://cursedprograms.github.io/cursedentertainment/scripts/footer.js"></script>
     </div>
 </body>
