--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://cursedprograms.github.io/cursedentertainment/styles/main-style.css');
+
 @font-face {
     font-family: 'Futura';
     src: url('https://fonts.googleapis.com/css?family=Futura');
