--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPT-2 Chatroom</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CursedGPT</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <div id="content" class="container">
-        <h1>GPT-2 Chatroom</h1>
+    <div class="content">
+        <h1>CursedGPT</h1>
         <div id="messages">
             {% if prompt %}
                 <div>
@@ -29,7 +29,11 @@
             <button type="submit">Send</button>
         </form>
     </div>
-            <footer id="dynamicFooter"></footer>
-        <script src="https://cursedprograms.github.io/cursedentertainment/scripts/footer.js"></script>
+    <div class="icons_container">
+    <iframe src="https://cursedprograms.github.io/cursedentertainment/iframes/social-media-icons/social-media-icons.html"
+    frameborder="0"></iframe>
+    </div>
+<footer id="dynamicFooter"></footer>
+<script src="https://cursedprograms.github.io/cursedentertainment/scripts/footer.js"></script>
 </body>
 </html>
