--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             {% endif %}
             {% if generated_text %}
                 <div>
-                    <strong>GPT-2:</strong>
+                    <strong>CursedGPT:</strong>
                     <p>{{ generated_text }}</p>
                 </div>
             {% endif %}
