--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link href="https://cursedprograms.github.io/cursedentertainment/cursedFavicon.png" rel="icon" type="image/x-icon" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CursedGPT</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
