--- a/templates/index.html
+++ b/templates/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link href="https://cursedprograms.github.io/cursedentertainment/cursedFavicon.png" rel="icon" type="image/x-icon" />
+<link href="" rel="icon" type="image/x-icon" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CursedGPT</title>
+<title>SynthiaGPT</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <div class="content">
-        <h1>CursedGPT</h1>
+        <h1>SynthiaGPT</h1>
         <div id="messages">
             {% if prompt %}
-                <div>
+                <div class="user-message">
                     <strong>You:</strong>
                     <p>{{ prompt }}</p>
                 </div>
             {% endif %}
             {% if generated_text %}
-                <div>
-                    <strong>CursedGPT:</strong>
+                <div class="synth-message">
+                    <strong>SynthiaGPT:</strong>
                     <p>{{ generated_text }}</p>
                 </div>
             {% endif %}
@@ -29,12 +29,13 @@
             <input type="text" id="prompt" name="prompt" required>
             <button type="submit">Send</button>
         </form>
+        <br>
+        <div align="center">
+            <img src="https://github.com/SynthWomb/synth.womb/raw/main/logos/synthwomb07.png" alt="Synth Womb Logo" width="200">
+        </div>
     </div>
-    <div class="icons_container">
-    <iframe src="https://cursedprograms.github.io/cursedentertainment/iframes/social-media-icons/social-media-icons.html"
-    frameborder="0"></iframe>
-    </div>
+    
 <footer id="dynamicFooter"></footer>
-<script src="https://cursedprograms.github.io/cursedentertainment/scripts/footer.js"></script>
+<script src="https://synthwomb.github.io/synth.womb/scripts/footer.js"></script>
 </body>
 </html>
